...
        }
        if (app.account == null) return Scaffold(body: WelcomeScreen(app));
        return Scaffold(
          appBar: tab == 0
              ? null
              : AppBar(
                  title: Text(['Мой Звук', 'Обзор', 'Поиск', 'Плейлисты'][tab]),
                  actions: [
                    IconButton(
                      tooltip: 'Настройки',
                      onPressed: () => settings(context),
                      icon: const Icon(Icons.tune_rounded),
                    ),
...
